opam-version: "1.2"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/ppx_csv_conv"
bug-reports: "https://github.com/janestreet/ppx_csv_conv/issues"
dev-repo: "https://github.com/janestreet/ppx_csv_conv.git"
license: "Apache-2.0"
build: [
  ["jbuilder" "build" "--only-packages" "ppx_csv_conv" "--root" "." "-j" jobs "@install"]
]
depends: [
  "csvfields"
  "jbuilder"                {build}
  "ppx_conv_func"
  "ppx_core"
  "ppx_driver"
  "ppx_metaquot"
  "ppx_type_conv"
  "ocaml-migrate-parsetree"
]
available: [ ocaml-version >= "4.03.0" ]
descr: "
Generate functions to read/write records in csv format

Part of the Jane Street's PPX rewriters collection.
"
